--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
-{include file='header.html'}
+<!DOCTYPE html>
+<html>
+<head>
+{include file='head.html'}
+</head>
 
 <div id="page">
   <header id="header" >
@@ -14,9 +18,9 @@
     </ul>
   </div>
   <div class="bd">
-  {if count($flash_ads) > 0}
+  {if count($index_ads) > 0}
     <ul>
-      {foreach from=$flash_ads item=ad}
+      {foreach from=$index_ads item=ad}
       <li>
         <!-- <a href='{$ad.link}' target='_blank'> -->
         <a>
@@ -157,31 +161,8 @@ TouchSlide({
 {/if}
 </div>
  
-<div id="content" class="footer mr-t20">
-  <div class="in">
-    <div class="search_box">
-      <form action="search.php" name="searchForm" id="searchForm_id">
-        <input name="keywords" type="text" id="keywordfoot" />
-        <button class="ico_07" type="submit" value="搜索" onclick="return check('keywordfoot')"> </button>
-      </form>
-    </div>
-    <a href="./" class="homeBtn"> <span class="ico_05"> </span> </a> <a href="#top" class="gotop"> <span class="ico_06"> </span> <p> TOP </p>
-    </a>
-  </div>
+{include file='foot.html'}
 
-  <style>
-    .footer .link a { color: gray; }
-    .footer .link a[href] { color: #1CA2E1; }
-  </style>
-  <p class="link region">
-    <a href="../">电脑版</a>
-    <a>移动版</a>
-    <!-- <a href="article.php?id=5">关于我们</a>
-    <a href="./article_cat-3-1.html">帮助中心</a> -->
-  </p>
-  <p class="region">{$copyright}</p>
-  <!--<div class="favLink region"> <a href="http://www.ecmoban.com"> powered by ecmoban </a> </div>-->
-</div>
 <link href="css/global_nav.css?v=20140408" type="text/css" rel="stylesheet"/>
 <div class="global-nav">
     <div class="global-nav__nav-wrap">
@@ -294,4 +275,5 @@ $(function() {
   //})
 });
 </script>
-{include file='footer.html'}
+</body>
+</html>
