--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,5 +1,5 @@
 <div id="content" class="footer mr-t20">
-  <div class="in">
+  <!-- <div class="in">
     <div class="search_box">
       <form action="search.php" name="searchForm" id="searchForm_id">
         <input name="keywords" type="text" id="keywordfoot" />
@@ -8,7 +8,7 @@
     </div>
     <a href="./" class="homeBtn"> <span class="ico_05"> </span> </a> <a href="#top" class="gotop"> <span class="ico_06"> </span> <p> TOP </p>
     </a>
-  </div>
+  </div> -->
   <style>
     .footer .link a { color: gray; }
     .footer .link a[href] { color: #1CA2E1; }
