--- a/templates/foot.html
+++ b/templates/foot.html
@@ -14,11 +14,13 @@
     .footer .link a[href] { color: #1CA2E1; }
   </style>
   <p class="link region">
-    <a href="../">电脑版</a>
-    <a>移动版</a>
+    <a>触屏版</a>
+    <a href="../">桌面版</a>
     <!-- <a href="article.php?id=5">关于我们</a>
     <a href="./article_cat-3-1.html">帮助中心</a> -->
   </p>
   <p class="region">{$copyright}</p>
   <!--<div class="favLink region"> <a href="http://www.ecmoban.com"> powered by ecmoban </a> </div>-->
 </div>
+
+{include file='global_nav.html'}
