--- a/templates/cat_all.html
+++ b/templates/cat_all.html
@@ -25,6 +25,7 @@
 <style>
   .crow_row { display: block; line-height: 2.5rem; }
   .crow_title { margin-left: 1.2rem; line-height: 2.5rem; }
+  .crow_arrow { padding-top: 3px; }
   .crow_item { width: 50%; margin: 0; }
   .crow_item_clear { font-size: 0.7rem; }
   .crow_item div { padding: 0 0.6rem; height: 2rem; overflow: hidden; }
