--- a/templates/foot.html
+++ b/templates/foot.html
@@ -12,6 +12,7 @@
   <style>
     .footer .link a { color: gray; }
     .footer .link a[href] { color: #1CA2E1; }
+    .footer p { line-height: 1.8rem; }
   </style>
   <p class="link region">
     <a>触屏版</a>
