--- a/templates/head.html
+++ b/templates/head.html
@@ -7,6 +7,13 @@
 <title>{$shop_name}</title>
 <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <link href="css/ectouch.css?v=2014" rel="stylesheet" type="text/css" />
+<style>
+  #header h1 {
+    padding: 0 50px;
+    height: 3rem;
+    overflow: hidden;
+  }
+</style>
 
 <script src="js/jquery-2.1.1.min.js"></script>
 <script>var Zepto = jQuery</script>
