--- a/templates/foot.html
+++ b/templates/foot.html
@@ -10,9 +10,10 @@
     </a>
   </div> -->
   <style>
+    .footer { padding: 0 0 0.6rem; }
     .footer .link a { color: gray; }
     .footer .link a[href] { color: #1CA2E1; }
-    .footer p { line-height: 1.8rem; }
+    .footer p { line-height: 1rem; margin-bottom: 0.4rem; }
   </style>
   <p class="link region">
     <a>触屏版</a>
