page goods_list

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@ TouchSlide({
 <section class="item_show_box1 box1 region">
   <header>
       <span>热门商品</span>
-      <a href="goods_list.php?type=best" class="ico_04 more">
+      <a href="goods_list.php?type=hot" class="ico_04 more">
       </a>
   </header>
   <div class="flex flex-f-row">
@@ -136,8 +136,8 @@ TouchSlide({
 <div class="blank2"></div>
 <section class="item_show_box1 box1 region">
   <header>
-      <span>最新商品</span>
-      <a href="goods_list.php?type=best" class="ico_04 more">
+      <span>最新上架</span>
+      <a href="goods_list.php?type=new" class="ico_04 more">
       </a>
   </header>
   <div class="flex flex-f-row">
