--- a/templates/goods_list.html
+++ b/templates/goods_list.html
@@ -8,7 +8,7 @@
 <div id="page" style="right: 0px; left: 0px; display: block;">
   <header id="header" style="z-index:1">
     <div class="header_l">
-      <div class="header_l"> <a class="ico_10" href="cat_all.php"> 返回 </a> </div>
+      <div class="header_l"> <a class="ico_10" href="javascript:history.back()"> 返回 </a> </div>
       <!-- <a class="ico_02" href="#menu"> 菜单栏 </a> -->
     </div>
     <h1>{$heading}</h1>
@@ -29,14 +29,14 @@
     </style>
     <ul>
       <li class="{if $sort eq ''}filter-cur{/if}">
-        <a href="category.php?c_id=3">综合<i class="f-ico-arrow-d"></i></a>
+        <a href="{$url_prefix}">日期<i class="f-ico-arrow-d"></i></a>
       </li>
       <li class="{if $sort eq 'click'}filter-cur{/if}">
-        <a href="category.php?c_id=3&sort=click">人气<i class="f-ico-arrow-d"></i></a>
+        <a href="{$url_prefix}&sort=click">人气<i class="f-ico-arrow-d"></i></a>
       </li>
       <!-- <li class=""> <a href="category.php?category=3&display=grid&brand=0&price_min=0&price_max=0&filter_attr=0&page=1&sort=sales_count&order=DESC#goods_list">销量</a></li> -->
       <li class="{if $sort eq 'price'}filter-cur{/if}">
-        <a href="category.php?c_id=3&sort=price">价格<i class="f-ico-arrow-d up"></i> <!-- <span> <i class="f-ico-triangle-mt "></i> <i class="f-ico-triangle-mb "></i> </span> --> </a>
+        <a href="{$url_prefix}&sort=price">价格<i class="f-ico-arrow-d up"></i> <!-- <span> <i class="f-ico-triangle-mt "></i> <i class="f-ico-triangle-mb "></i> </span> --> </a>
       </li>
       <!-- <li class="filter-navBtn"><a href="javascript:;" class="j_filterBtn disabled" onclick="mtShowMenu()">筛选</a></li> -->
     </ul>
@@ -58,7 +58,7 @@
   .srp.album .proInfo-wrap { height: 42px; }
 </style>
 <div class="srp album flex-f-row" id="J_ItemList" style="opacity:1;">
-  {foreach from=$goods_data item=goods}
+  {foreach from=$goods_list item=goods}
   <div class="product flex_in single_item" id="more_element_1">
     <a href="goods.php?id={$goods.id}">
       <div class="pro-inner">
