page goods (-cart)

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -10,7 +10,7 @@
     </a>
   </div> -->
   <style>
-    .footer { padding: 0 0 0.6rem; }
+    .footer { padding: 0 0 0.6rem; margin-top: 14px; }
     .footer .link a { color: gray; }
     .footer .link a[href] { color: #1CA2E1; }
     .footer p { line-height: 1rem; margin-bottom: 0.4rem; }
