--- a/templates/goods_list.html
+++ b/templates/goods_list.html
@@ -8,12 +8,12 @@
 <div id="page" style="right: 0px; left: 0px; display: block;">
   <header id="header" style="z-index:1">
     <div class="header_l">
-      <div class="header_l"> <a class="ico_10" href="javascript:history.back()"> 返回 </a> </div>
-      <!-- <a class="ico_02" href="#menu"> 菜单栏 </a> -->
+      <div class="header_l">
+        <a class="ico_10" href="javascript:history.back()"> 返回 </a>
+      </div>
     </div>
     <h1>{$heading}</h1>
     <div class="header_r">
-      <!-- <a class="switchBtn switchBtn-album" href="javascript:void(0);"  onclick="changeCl(this)" style="opacity: 1;"> 切换 </a> -->
       <a class="ico_01" href="flow.php"> 购物车 </a>
     </div>
   </header>
