--- a/templates/head.html
+++ b/templates/head.html
@@ -8,6 +8,10 @@
 <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <link href="css/ectouch.css?v=2014" rel="stylesheet" type="text/css" />
 <style>
+  #header {
+    /*background-color: #008DDD;*/
+    background-color: #5151ec;
+  }
   #header h1 {
     padding: 0 50px;
     height: 3rem;
