--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,11 @@
   </header>
 </div>
  
+<style>
+.focus .hd ul .on {
+  background-color: #5151ec;
+}
+</style>
 <div id="focus" class="focus region">
   <div class="hd">
     <ul>
@@ -83,6 +88,12 @@ TouchSlide({
                 </ul>
   </div> -->
   
+
+<style>
+  .item_show_box1 header {
+    background-color: #6a6aee;
+  }
+</style>
 
 {if count($hot_goods) > 0}
 <div class="blank2"></div>
