mobile lang support

--- a/templates/cat_all.html
+++ b/templates/cat_all.html
@@ -7,12 +7,12 @@
 
 <header id="header">
   <div class="header_l header_return">
-    <a class="ico_10" onclick="history.back()"> 返回 </a>
+    <a class="ico_10" onclick="history.back()"></a>
   </div>
-  <h1> 全部分类 </h1>
+  <h1>{$lang.cat_all}</h1>
   <div class="header_r">
     <!-- <a class="ico_03"  onClick="showSearch()"> 搜索 </a> -->
-    <a class="ico_01" href="flow.php"> 购物车 </a>
+    <a class="ico_01" href="flow.php"></a>
   </div>
 </header>
 
