--- a/templates/foot.html
+++ b/templates/foot.html
@@ -10,18 +10,19 @@
     </a>
   </div> -->
   <style>
-    .footer { padding: 0 0 0.6rem; margin-top: 14px; }
+    .footer { padding: 0 0 0.6rem; margin-top: 20px; }
     .footer .link a { color: gray; }
     .footer .link a[href] { color: #1CA2E1; }
     .footer p { line-height: 1rem; margin-bottom: 0.4rem; }
   </style>
-  <p class="link region">
+  <!-- <p class="link region">
     <a>触屏版</a>
     <a href="../">桌面版</a>
-    <!-- <a href="article.php?id=5">关于我们</a>
-    <a href="./article_cat-3-1.html">帮助中心</a> -->
-  </p>
-  <p class="region">{$copyright}</p>
+    <a href="article.php?id=5">关于我们</a>
+    <a href="./article_cat-3-1.html">帮助中心</a>
+  </p> -->
+  <p class="region">©{$year} {$shop_name}
+  <br>{$lang.copytail}</p>
   <!--<div class="favLink region"> <a href="http://www.ecmoban.com"> powered by ecmoban </a> </div>-->
 </div>
 
