--- a/templates/search_box.html
+++ b/templates/search_box.html
@@ -36,7 +36,7 @@
 <header class="region">
   <form id="search-form" action="search.php">
     <div class="fakeInput box1 radius15">
-      <input type="text" placeholder="搜本站商品" name="keywords" id="search-box">
+      <input type="text" placeholder="{$lang.search}" name="keywords" id="search-box">
       <div class="search ico_03"> </div>
     </div>
   </form>
