--- a/templates/cat_all.html
+++ b/templates/cat_all.html
@@ -33,6 +33,7 @@
 <div class="clist">
   <ul>
     {foreach from=$pcat_array item=pcat_data}
+    {if $pcat_data.name}
     <li class="crow level1">
       <a class="crow_row" href="category.php?c_id={$pcat_data.id}">
         <!-- <div class="crow_icon">
@@ -52,14 +53,17 @@
       <ul class="clist clist_sub clearfix" style="opacity: 1;">
         <li class="crow"> 
           {foreach from=$pcat_data['cat_id'] item=cat_data}
+          {if $cat_data.name}
           <a href="category.php?c_id={$cat_data.id}" class="crow_item crow_item_clear"> 
             <div>{$cat_data.name}</div>
           </a>
+          {/if}
           {/foreach}
         </li>
       </ul>
       {/if}
     </li>
+    {/if}
     {/foreach}
   </ul>
 </div>
